--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Handlee&family=Montserrat:wght@600&family=Roboto&display=swap');
 
-
-
 h1 {
 	font-family: 'Handlee', cursive;
 	font size: 72px;
 }
+
 h2{
 	font-family: 'Montserrat', sans-serif;
 }
+
 *{
 	font-family: 'Roboto', sans-serif;
+}
+
+img{
+	width: 250px;
+	border-radius: 50%;
 }
